Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-1938] fixed permission check inefficiency in charts (Aly)
 - [ZBX-1957] fixed compilation errors under OpenBSD (Sasha)
 - [ZBX-1869] fixed graph max Y most top value calculation (Aly)
 - [ZBX-1948] fixed node disappearing after node deleted and then created with same ID (Vedmak)
 - [ZBXNEXT-225] update Brazilian Portuguese translation; thanks to murilex (Richlv)
 - [DEV-137] add basic bootstrap script (Richlv)
 - [ZBX-1944] fixed no permission error when try to view simple graph from childnodes (Vedmak)
 - [ZBX-1871] made zabbix not require mbstring_overload to be enabled (Vedmak)
 - [ZBX-1862] fixed host creation with link to templates with trigger dependencies (Aly)
 - [ZBX-1879] fixed unnecessary line brakes in IE7 (Vedmak)
 - [ZBX-1931] fixed process of sending active checks to ensure every active item is located in the server cache (Dmitry)
 - [ZBX-1935] remove incorrect item and fix minor typo in the default Windows template (Richlv)
 - [ZBX-1650] allowed to pass "-" (dash) in parameters for "UserParameter" flexible parameters (Dmitry)
 - [ZBX-1923] fixed processing of data sent by 1.4, 1.6 agents not allowing wrong "eventid" values (Dmitry)
 - [ZBX-1763] fixed SLA showing red line when there is no problem (Vedmak)
 - [ZBX-1922] fixed compilation of Zabbix agent under ac AIX 5.1/5.2 (Sasha)
 - [ZBX-1899] fixed sticky starttime in graphs (Aly)
 - [ZBX-1785] fixed starttime in screens, slides on screen/slide switch (Aly)
 - [ZBX-1784] improved displaying big numbers and units in graphs (Aly)
 - [ZBX-1764] fixed right Y axis problem if on left Y axis no data (Aly)
 - [ZBX-1912] fixed nonstandart font vertical text display (Vedmak)
 - [ZBX-1915] fixed template/host name check on creation/update (Aly)
 - [ZBX-1820] fixed graph preview in configuration graph form (Aly)