@@ -97,7 +97,7 @@ class czbxrpc{
 			return self::$result;
 		}
 
-		call_user_func(array('self', $resource), $action, $params);
+		call_user_func(array('czbxrpc', $resource), $action, $params);
 
 		if(self::$result !== false){
 			self::$result = array('result' => self::$result);
